--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "[]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
     ");\n",
     "DROP TABLE IF EXISTS CREDITS;\n",
     "CREATE TABLE CREDITS (\n",
-    "    CID INTEGER NOT NULL,\n",
+    "    CID INTEGER PRIMARY KEY,\n",
     "    CCODE TEXT NOT NULL,\n",
     "    AID INTEGER NOT NULL,\n",
     "    MID INTEGER NOT NULL,\n",
@@ -163,6 +163,26 @@
    "source": [
     "4. **Save, add, commit, and push your work to GitHub.**  \n",
     "Use the commit summary comment \"Completed Part 2\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Completed Part 2'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Completed Part 2\""
    ]
   },
   {
